[package]
name = "bitsgap-polo"
version = "0.1.0"
edition = "2021"

[dependencies]
duckdb = { version = "1.1.1", features = ["bundled", "json", "csv", "parquet"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tungstenite = { version = "0.26.1", features = ["native-tls"] }
